[gd_scene load_steps=2 format=3 uid="uid://c6qtdmbb5804r"]

[ext_resource type="Script" uid="uid://puaxctvtde21" path="res://ui/flow/hud/character_select_hud.gd" id="1_wuons"]

[node name="CharacterSelectHUD" type="CanvasLayer"]
script = ExtResource("1_wuons")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="Root"]
custom_minimum_size = Vector2(520, 360)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -592.0
offset_top = -180.0
offset_right = -72.0
offset_bottom = 180.0
grow_horizontal = 0
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Root/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="VBox" type="VBoxContainer" parent="Root/Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Root/Panel/Margin/VBox"]
layout_mode = 2
text = "Select character"
horizontal_alignment = 1

[node name="CharacterList" type="ItemList" parent="Root/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
allow_reselect = true

[node name="Buttons" type="HBoxContainer" parent="Root/Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DeleteButton" type="Button" parent="Root/Panel/Margin/VBox/Buttons"]
layout_mode = 2
text = "Delete Character"

[node name="EnterButton" type="Button" parent="Root/Panel/Margin/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enter world"

[node name="LogoutButton" type="Button" parent="Root/Panel/Margin/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Logout"
